# Romulo-ds-tools

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
conf/: base.yaml  classification.yaml  config.yaml  datasets.yaml  regression.yaml  time_series.yaml
conf/student_performace_v1/: student_performace_01.yaml
project/: __init__.py  features.py  models.py  preprocessing.py  schema.py  visualization.py
project/schemas/: __init__.py  student_performace.py
recipes/pytorch/: README.md
src/romulo_ds_tools/: __init__.py  cli.py  config.py  custom.py  dashboard.py  datasets.py  features.py  io.py  metrics.py  modeling.py  prediction.py  profiling.py  tracking.py  training.py  validation.py  visualization.py
tests/: conftest.py  test_cli.py  test_cli_import_path.py  test_config.py  test_dashboard.py  test_dataset_cli.py  test_datasets.py  test_dvc_config.py  test_features.py  test_io.py  test_modeling.py  test_prediction.py  test_profiling.py  test_project_contracts.py  test_tracking.py  test_training.py  test_validation.py  test_visualization.py
