[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "romulo-ds-tools"
version = "0.1.0"
description = "Personal data science and ML project template for tabular modeling, time-series features, tracking, and dashboards."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
  { name = "Romulo" }
]
dependencies = [
  "dash>=2.17",
  "dvc>=3.50",
  "hydra-core>=1.3",
  "joblib>=1.4",
  "mlflow>=2.14",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pandera[pandas]>=0.20",
  "plotly>=5.22",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pre-commit>=3.7",
]
pytorch = [
  "torch>=2.3",
  "lightning>=2.3",
  "torchmetrics>=1.4",
]

[project.scripts]
romds = "romulo_ds_tools.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/romulo_ds_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--cov=romulo_ds_tools",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
markers = [
  "integration: tests that exercise external CLIs or heavier dependencies",
  "slow: tests that are useful but not part of the fast refactor loop",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
